2013-12-01  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* dtable.cc (dtable::find_unused_handle): Break out of the right loop.

2013-12-01  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* dtable.cc (dtable::find_unused_handle): Fix off-by-one error.  Always
	exit through the bottom.
	(cygwin_attach_handle_to_fd): Make sure that fd tab is locked for the
	duration of this function.
	* dtable.h (dtable::lock): Make public.
	(dtable::unlock): Ditto.
	(dtable): Remove friends.

2013-12-01  Corinna Vinschen  <corinna@vinschen.de>

	* dtable.cc (dtable::extend): Change local variable new_size to size_t
	as well.

	* thread.cc: Fix comment.

2013-11-30  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* dtable.h (dtable::first_fd_for_open): Change declaration to size_t.
	(dtable::extend): Change parameter to size_t.
	(dtable::find_unused_handle): Ditto.
	* dtable.cc: Remove now-unused header.
	(dtable::extend): Remove pointless test.  Change parameter to size_t.
	(dtable::find_unused_handle): Rework to avoid MAX calculation in
	extend() call.  Change parameter to size_t.

2013-11-30  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* dtable.cc (build_fh_pc): When creating an archetype, use native name
	rather than unix name if name doesn't exist.

2013-11-29  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* include/cygwin/version.h (CYGWIN_VERSION_DLL_MINOR): Bump to 27.

2013-11-29  Jon TURNEY  <jon.turney@dronecode.org.uk>

	* include/cygwin/stdlib.h (initstate, random, setstate, srandom):
	Prototype if not __STRICT_ANSI__ or _XOPEN_SOURCE is defined
	appropriately.

2013-11-28  Alexey Pavlov  <alexpux@gmail.com>

	* include/glob.h: Fix invalid use of 'restrict' error.

2013-11-27  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (try_to_bin): Enhance debug output in case reopen fails.

2013-11-27  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (try_to_bin): Drop fh_dup, reuse tmp_fh instead.

2013-11-27  Corinna Vinschen  <corinna@vinschen.de>
